--- a/NSF_TIP_AI_Trust_POGIL_Activity_Fall_2023.ipynb
+++ b/NSF_TIP_AI_Trust_POGIL_Activity_Fall_2023.ipynb
@@ -313,10 +313,10 @@
       },
       "source": [
         "#@title Discussion Questions 13 - 14 (recorder will write and save answers)\n",
-        "#@markdown 1. What you see above are 10 sample rows randomly selected (or different number of rows if you can change the code) of the dataset. Based on this view of an extremely small part of the data (because there are more 15,000 rows in the full dataset) what variable would you choose for the root? You do not need to consider Age in your discussions.\n",
-        "activity1_answer1 = \"\" #@param {type:\"string\"}\n",
-        "#@markdown 2. What was the basis of choosing that variable for root in the previous question?\n",
-        "activity1_answer2 = \"\" #@param {type:\"string\"}"
+        "#@markdown 13. What you see above are 10 sample rows randomly selected (or different number of rows if you can change the code) of the dataset. Based on this view of an extremely small part of the data (because there are more than 15,000 rows in the full dataset) what variable would you choose for the root? You do not need to consider Age in your discussions.\n",
+        "activity1_answer13 = \"\" #@param {type:\"string\"}\n",
+        "#@markdown 14. What was the basis of choosing that variable for root in the previous question?\n",
+        "activity1_answer14 = \"\" #@param {type:\"string\"}"
       ],
       "execution_count": null,
       "outputs": []
