--- a/NSF_TIP_AI_Trust_POGIL_Activity_Fall_2023.ipynb
+++ b/NSF_TIP_AI_Trust_POGIL_Activity_Fall_2023.ipynb
@@ -286,7 +286,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title Take a look at the top rows of the datset / table (press \"run\" button)\n",
+        "#@title Take a look at some randomly chosen samples (rows) of the dataset (table) (press \"run\" button)\n",
         "\n",
         "# Load your dataset\n",
         "data = pd.read_csv(\"modified_police_public_contact_survey_traffic_stop_2005_2015.csv\")\n",
